--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,24 @@ body {
     line-height: 18px;
     background-color: rgb(243 244 246);
 }
+
+/* Custom scrollbar styles */
+::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+    border: 3px solid #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #6b6a6a;
+}
